--- a/src/app/components/mapa/mapa.component.scss
+++ b/src/app/components/mapa/mapa.component.scss
@@ -6,22 +6,35 @@
 ion-content {
   --background: transparent;
   position: relative;
+  display: block;
+  height: 100%;
+  contain: strict;
 }
 
 #map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   height: 100%;
   width: 100%;
+  z-index: 1;
 }
 
-/* Panel de botones (lado derecho) */
-.control-panel {
+.control-panel,
+.posicion-btn,
+.map-container {
   position: absolute;
+  z-index: 1000;
+}
+
+.control-panel {
   top: 60px;
   right: 10px;
-  z-index: 1000;
   display: flex;
   flex-direction: column;
-  gap: 6px; /* Espacio entre íconos más pequeño */
+  gap: 6px;
 }
 
 .control-panel button {
@@ -41,24 +54,29 @@ ion-content {
   height: 22px;
 }
 
-/* Botón de ubicación (abajo derecha) */
 .posicion-btn {
-  position: absolute;
   right: 16px;
-  margin-bottom: 50px;
-  bottom: calc(env(safe-area-inset-bottom, 16px) + 64px); // se adapta a móviles con notch
-  z-index: 1000;
+  bottom: 110px; /* más arriba para no chocar con tabs */
 }
 
-.posicion-btn button {
+.map-container {
+  bottom: 16px;
+  left: 16px;
   background: white;
-  border: 1px solid #ccc;
+  padding: 8px;
   border-radius: 10px;
-  width: 44px;
-  height: 44px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+.map-container input {
+  padding: 6px;
+  margin-right: 4px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+}
+
+.margin-center {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important; /* Opcional: para centrar también verticalmente dentro del div */
 }
